# rhombus

./: .rustfmt.toml  .travis.yml  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  vector.rs
core/src/dodec/coordinates/: mod.rs  quadric.rs
core/src/hex/: field_of_view.rs  largest_area.rs  mod.rs
core/src/hex/coordinates/: axial.rs  cubic.rs  direction.rs  mod.rs  ring.rs
core/src/hex/storage/: adjacent.rs  hash.rs  mod.rs  rect.rs
hex/: Cargo.toml
hex/src/: lib.rs
hex/src/coordinates/: axial.rs  cubic.rs  mod.rs
viewer/: Cargo.toml
viewer/config/: display.ron  logger.yaml
viewer/src/: assets.rs  color.rs  dispose.rs  gl.rs  input.rs  main.rs  snake.rs  world.rs
viewer/src/demo/: mod.rs
viewer/src/demo/dodec/: directions.rs  mod.rs  snake.rs  sphere.rs
viewer/src/demo/hex/: bumpy_builder.rs  directions.rs  flat_builder.rs  mod.rs  ring.rs  snake.rs
viewer/src/dodec/: directions.rs  snake.rs  sphere.rs
viewer/src/hex/: bumpy_builder.rs  cubic_range_shape.rs  directions.rs  flat_builder.rs  mod.rs  pointer.rs  ring.rs  snake.rs
viewer/src/hex/cellular/: builder.rs  world.rs
viewer/src/hex/custom/: builder.rs  world.rs
viewer/src/hex/render/: area.rs  area_edge.rs  edge.rs  mod.rs  multi.rs  renderer.rs  square.rs  tile.rs
viewer/src/hex/rooms_and_mazes/: builder.rs  mod.rs  world.rs
viewer/src/hex/shape/: cubic_range.rs  mod.rs
viewer/src/system/: cubic.rs  mod.rs  quadric.rs
viewer/src/systems/: camera_distance.rs  follow_me.rs  mod.rs
