[package]
name = "rhombus_viewer"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99"
amethyst = { version = "0.15", features = ["vulkan"] }
rhombus_core = { path = "../core"}
structopt = "0.3"
serde_yaml = "0.8"