[package]
name = "rhombus_viewer"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]
edition = "2018"

[dependencies]
derive_more = "0.99"
derive-new = "0.5"
amethyst = { version = "0.15", features = ["vulkan"] }
itertools = "0.9"
rand = "0.7"
rhombus_core = { path = "../core"}
structopt = "0.3"
serde_yaml = "0.8"
smallvec = "1.4"